# progpick

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: docs.yml  rust-fmt.yml  rust.yml
contrib/: progpick.1.scd
scripts/: cat.sh  halfway.sh  sleep-10ms.sh  sleep.sh
src/: errors.rs  main.rs  pattern.rs  tokens.rs
