[package]
name = "progpick"
version = "0.1.0"
description = "Bruteforce with a stream of permutations of a specific pattern"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/progpick"
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1.0.57"
atty = "0.2.11"
clap = { version = "3.2.5", features = ["derive"] }
console = { version = "0.15.0", default-features = false }
env_logger = "0.9"
indicatif = "0.16"
log = "0.4"
shellwords = "1.0"
