[package]
name = "progpick"
version = "0.2.0"
description = "Bruteforce with a stream of permutations of a specific pattern"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/kpcyrd/progpick"
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
clap = { version = "4", features = ["derive"] }
console = { version = "0.15.0", default-features = false }
env_logger = "0.11"
indicatif = "0.17"
log = "0.4"
shellwords = "1.0"
